Carousel with length problem

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/carousel.css">
 
+    <link rel="icon" href="assets/img/icone/icon.png">
+
     <script src="assets/js/index.js" defer></script>
 
     <title>Cardápio</title>
@@ -19,10 +21,10 @@
         <div class="global">
             <div class="cardapio-opcoes">
                 <div class="carousel aberto" id="carousel-x-salada">
-                    <button class="arrow-left control arrow-cor-salada" aria-label="Previous image">➤</button>
-                    <button class="arrow-right control arrow-cor-salada" aria-label="Next image">➤</button>
+                    <button class="arrow-left control" aria-label="Previous image">➤</button>
+                    <button class="arrow-right control" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche cor-salada" id="cartão-x-salada">
+                        <div class="cartao-lanche cor-salada item" id="cartão-x-salada">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Salada</h2>
@@ -108,7 +110,7 @@
                             </div>
                         </div>
 
-                        <div class="cartao-lanche cor-salada" id="cartão-x-salada">
+                        <div class="cartao-lanche cor-salada item" id="cartão-x-salada">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Salada com Batata Frita</h2>
@@ -198,10 +200,10 @@
                 </div>
 
                 <div class="carousel" id="carousel-x-bacon">
-                    <button class="arrow-left control arrow-cor-bacon" aria-label="Previous image">➤</button>
-                    <button class="arrow-right control arrow-cor-bacon" aria-label="Next image">➤</button>
+                    <button class="arrow-left control" aria-label="Previous image">➤</button>
+                    <button class="arrow-right control" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche cor-bacon" id="cartão-x-bacon">
+                        <div class="cartao-lanche cor-bacon item" id="cartão-x-bacon">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Bacon</h2>
@@ -288,7 +290,7 @@
                             </div>
                         </div>
 
-                        <div class="cartao-lanche cor-bacon" id="cartão-x-bacon">
+                        <div class="cartao-lanche cor-bacon item" id="cartão-x-bacon">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Bacon com Batata Frita</h2>
@@ -379,10 +381,10 @@
                 
 
                 <div class="carousel" id="carousel-x-frango">
-                    <button class="arrow-left control arrow-cor-frango" aria-label="Previous image">➤</button>
-                    <button class="arrow-right control arrow-cor-frango" aria-label="Next image">➤</button>
+                    <button class="arrow-left control" aria-label="Previous image">➤</button>
+                    <button class="arrow-right control" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche cor-frango" id="cartão-x-frango">
+                        <div class="cartao-lanche cor-frango item" id="cartão-x-frango">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Frango</h2>
@@ -469,7 +471,7 @@
                             </div>
                         </div>
 
-                        <div class="cartao-lanche cor-frango" id="cartão-x-frango">
+                        <div class="cartao-lanche cor-frango item" id="cartão-x-frango">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Frango com Batata Frita</h2>
@@ -560,10 +562,10 @@
 
 
                 <div class="carousel" id="carousel-x-tudo">
-                    <button class="arrow-left control arrow-cor-tudo" aria-label="Previous image">➤</button>
-                    <button class="arrow-right control arrow-cor-tudo" aria-label="Next image">➤</button>
+                    <button class="arrow-left control" aria-label="Previous image">➤</button>
+                    <button class="arrow-right control" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche cor-tudo" id="cartão-x-tudo">
+                        <div class="cartao-lanche cor-tudo item" id="cartão-x-tudo">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Tudo</h2>
@@ -650,7 +652,7 @@
                             </div>
                         </div>
 
-                        <div class="cartao-lanche com fritas cor-tudo" id="cartão-x-tudo">
+                        <div class="cartao-lanche com fritas cor-tudo item" id="cartão-x-tudo">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Tudo com Batata Frita</h2>
