--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <button class="arrow-left control" aria-label="Previous image">➤</button>
                     <button class="arrow-right control" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche cor-salada item" id="cartão-x-salada">
+                        <div class="cartao-lanche cor-salada current-item" id="cartao-x-salada">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Salada</h2>
@@ -110,7 +110,7 @@
                             </div>
                         </div>
 
-                        <div class="cartao-lanche cor-salada item" id="cartão-x-salada">
+                        <div class="cartao-lanche cor-salada" id="cartao-x-salada">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Salada com Batata Frita</h2>
@@ -203,7 +203,7 @@
                     <button class="arrow-left control" aria-label="Previous image">➤</button>
                     <button class="arrow-right control" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche cor-bacon item" id="cartão-x-bacon">
+                        <div class="cartao-lanche cor-bacon current-item" id="cartao-x-bacon">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Bacon</h2>
@@ -290,7 +290,7 @@
                             </div>
                         </div>
 
-                        <div class="cartao-lanche cor-bacon item" id="cartão-x-bacon">
+                        <div class="cartao-lanche cor-bacon" id="cartao-x-bacon">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Bacon com Batata Frita</h2>
@@ -384,7 +384,7 @@
                     <button class="arrow-left control" aria-label="Previous image">➤</button>
                     <button class="arrow-right control" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche cor-frango item" id="cartão-x-frango">
+                        <div class="cartao-lanche cor-frango current-item" id="cartao-x-frango">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Frango</h2>
@@ -471,7 +471,7 @@
                             </div>
                         </div>
 
-                        <div class="cartao-lanche cor-frango item" id="cartão-x-frango">
+                        <div class="cartao-lanche cor-frango" id="cartao-x-frango">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Frango com Batata Frita</h2>
@@ -565,7 +565,7 @@
                     <button class="arrow-left control" aria-label="Previous image">➤</button>
                     <button class="arrow-right control" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche cor-tudo item" id="cartão-x-tudo">
+                        <div class="cartao-lanche cor-tudo current-item" id="cartao-x-tudo">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Tudo</h2>
@@ -652,7 +652,7 @@
                             </div>
                         </div>
 
-                        <div class="cartao-lanche com fritas cor-tudo item" id="cartão-x-tudo">
+                        <div class="cartao-lanche com fritas cor-tudo" id="cartao-x-tudo">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Tudo com Batata Frita</h2>
