--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/opcoes.css">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/carousel.css">
+    <link rel="stylesheet" href="assets/css/popup.css">
 
     <link rel="icon" href="assets/img/icone/icon.png">
 
@@ -107,6 +108,19 @@
                                     </div>
                                 </div>
                                 <button class="comprar cor-salada">Comprar</button>
+                                <div class="popup-wrapper-salada">
+                                    <div class="popup-salada">
+
+                                        <div class="popup-close-salada">x</div>
+
+                                        <div class="popup-content-salada">
+                                            <h2>Pedidos especiais</h2>
+                                            <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação? Descreva abaixo.</p>
+                                            <textarea name="observacaoDoPedido" id="observacaoDoPedido-salada" cols="30" rows="4"></textarea>
+                                            <a class="popup-link" href="#">Continuar comprando</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
