I improved the background and fixed the position of the modal on the screen

--- a/index.html
+++ b/index.html
@@ -107,17 +107,17 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-salada">Comprar</button>
-                                <div class="popup-wrapper-salada">
-                                    <div class="popup-salada">
+                                <button class="comprar comprar-salada cor-salada">Comprar</button>
+                                <div class="popup-wrapper">
+                                    <div class="popup">
 
-                                        <div class="popup-close-salada">x</div>
+                                        <div class="popup-close">x</div>
 
-                                        <div class="popup-content-salada">
-                                            <h2>Pedidos especiais</h2>
+                                        <div class="popup-content">
+                                            <h2>Observações</h2>
                                             <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação? Descreva abaixo.</p>
-                                            <textarea name="observacaoDoPedido" id="observacaoDoPedido-salada" cols="30" rows="4"></textarea>
-                                            <a class="popup-link" href="#">Continuar comprando</a>
+                                            <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35" rows="4"></textarea>
+                                            <a class="popup-link" href="#">Continue Comprando</a>
                                         </div>
                                     </div>
                                 </div>
@@ -207,7 +207,20 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-salada">Comprar</button>
+                                <button class="comprar comprar-salada-fritas cor-salada">Comprar</button>
+                                <div class="popup-wrapper">
+                                    <div class="popup">
+
+                                        <div class="popup-close">x</div>
+
+                                        <div class="popup-content">
+                                            <h2>Observações</h2>
+                                            <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação? Descreva abaixo.</p>
+                                            <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35" rows="4"></textarea>
+                                            <a class="popup-link" href="#">Continue Comprando</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -300,7 +313,20 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-bacon">Comprar</button>
+                                <button class="comprar comprar-bacon cor-bacon">Comprar</button>
+                                <div class="popup-wrapper">
+                                    <div class="popup">
+
+                                        <div class="popup-close">x</div>
+
+                                        <div class="popup-content">
+                                            <h2>Observações</h2>
+                                            <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação? Descreva abaixo.</p>
+                                            <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35" rows="4"></textarea>
+                                            <a class="popup-link" href="#">Continue Comprando</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
@@ -387,7 +413,20 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-bacon">Comprar</button>
+                                <button class="comprar comprar-bacon-fritas cor-bacon">Comprar</button>
+                                <div class="popup-wrapper">
+                                    <div class="popup">
+
+                                        <div class="popup-close">x</div>
+
+                                        <div class="popup-content">
+                                            <h2>Observações</h2>
+                                            <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação? Descreva abaixo.</p>
+                                            <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35" rows="4"></textarea>
+                                            <a class="popup-link" href="#">Continue Comprando</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -481,7 +520,20 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-frango">Comprar</button>
+                                <button class="comprar comprar-frango cor-frango">Comprar</button>
+                                <div class="popup-wrapper">
+                                    <div class="popup">
+
+                                        <div class="popup-close">x</div>
+
+                                        <div class="popup-content">
+                                            <h2>Observações</h2>
+                                            <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação? Descreva abaixo.</p>
+                                            <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35" rows="4"></textarea>
+                                            <a class="popup-link" href="#">Continue Comprando</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
@@ -568,7 +620,20 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-frango">Comprar</button>
+                                <button class="comprar comprar-frango-fritas cor-frango">Comprar</button>
+                                <div class="popup-wrapper">
+                                    <div class="popup">
+
+                                        <div class="popup-close">x</div>
+
+                                        <div class="popup-content">
+                                            <h2>Observações</h2>
+                                            <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação? Descreva abaixo.</p>
+                                            <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35" rows="4"></textarea>
+                                            <a class="popup-link" href="#">Continue Comprando</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -662,7 +727,20 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-tudo">Comprar</button>
+                                <button class="comprar comprar-tudo cor-tudo">Comprar</button>
+                                <div class="popup-wrapper">
+                                    <div class="popup">
+
+                                        <div class="popup-close">x</div>
+
+                                        <div class="popup-content">
+                                            <h2>Observações</h2>
+                                            <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação? Descreva abaixo.</p>
+                                            <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35" rows="4"></textarea>
+                                            <a class="popup-link" href="#">Continue Comprando</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
@@ -749,7 +827,20 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-tudo">Comprar</button>
+                                <button class="comprar comprar-tudo-fritas cor-tudo">Comprar</button>
+                                <div class="popup-wrapper">
+                                    <div class="popup">
+
+                                        <div class="popup-close">x</div>
+
+                                        <div class="popup-content">
+                                            <h2>Observações</h2>
+                                            <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação? Descreva abaixo.</p>
+                                            <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35" rows="4"></textarea>
+                                            <a class="popup-link" href="#">Continue Comprando</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
