--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="assets/css/opcoes.css">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/carousel.css">
-    <link rel="stylesheet" href="assets/css/popup.css">
+    <link rel="stylesheet" href="assets/css/modal.css">
+    <link rel="stylesheet" href="assets/css/responsivo.css">
 
     <link rel="icon" href="assets/img/icone/icon.png">
 
@@ -24,8 +25,8 @@
         <div class="global">
             <div class="cardapio-opcoes">
                 <div class="carousel aberto" id="carousel-x-salada">
-                    <button class="arrow-left control" aria-label="Previous image">➤</button>
-                    <button class="arrow-right control" aria-label="Next image">➤</button>
+                    <button class="arrow-left control" aria-label="Previous image">⮜</button>
+                    <button class="arrow-right control" aria-label="Next image">⮞</button>
                     <div class="cartao-wrapper">
                         <div class="cartao-lanche cor-salada current-item" id="cartao-x-salada">
                             <div class="cartao-topo">
@@ -242,8 +243,8 @@
                 </div>
 
                 <div class="carousel" id="carousel-x-bacon">
-                    <button class="arrow-left control" aria-label="Previous image">➤</button>
-                    <button class="arrow-right control" aria-label="Next image">➤</button>
+                    <button class="arrow-left control" aria-label="Previous image">⮜</button>
+                    <button class="arrow-right control" aria-label="Next image">⮞</button>
                     <div class="cartao-wrapper">
                         <div class="cartao-lanche cor-bacon current-item" id="cartao-x-bacon">
                             <div class="cartao-topo">
@@ -461,8 +462,8 @@
 
 
                 <div class="carousel" id="carousel-x-frango">
-                    <button class="arrow-left control" aria-label="Previous image">➤</button>
-                    <button class="arrow-right control" aria-label="Next image">➤</button>
+                    <button class="arrow-left control" aria-label="Previous image">⮜</button>
+                    <button class="arrow-right control" aria-label="Next image">⮞</button>
                     <div class="cartao-wrapper">
                         <div class="cartao-lanche cor-frango current-item" id="cartao-x-frango">
                             <div class="cartao-topo">
@@ -681,8 +682,8 @@
 
 
                 <div class="carousel" id="carousel-x-tudo">
-                    <button class="arrow-left control" aria-label="Previous image">➤</button>
-                    <button class="arrow-right control" aria-label="Next image">➤</button>
+                    <button class="arrow-left control" aria-label="Previous image">⮜</button>
+                    <button class="arrow-right control" aria-label="Next image">⮞</button>
                     <div class="cartao-wrapper">
                         <div class="cartao-lanche cor-tudo current-item" id="cartao-x-tudo">
                             <div class="cartao-topo">
