All modals working

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-salada">Comprar</button>
-                                <dialog>
+                                <button class="comprar cor-salada" id="comprar-salada">Comprar</button>
+                                <dialog id="dialog-salada">
                                     <div class="modal-close">x</div>
 
                                     <div class="modal-content">
@@ -224,8 +224,8 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-salada">Comprar</button>
-                                <dialog>
+                                <button class="comprar cor-salada" id="comprar-salada-fritas">Comprar</button>
+                                <dialog id="dialog-salada-fritas">
                                     <div class="modal-close">x</div>
 
                                     <div class="modal-content">
@@ -336,8 +336,8 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-bacon">Comprar</button>
-                                <dialog>
+                                <button class="comprar cor-bacon" id="comprar-bacon">Comprar</button>
+                                <dialog id="dialog-bacon">
                                     <div class="modal-close">x</div>
 
                                     <div class="modal-content">
@@ -442,8 +442,8 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-bacon">Comprar</button>
-                                <dialog>
+                                <button class="comprar cor-bacon" id="comprar-bacon-fritas">Comprar</button>
+                                <dialog id="dialog-bacon-fritas">
                                     <div class="modal-close">x</div>
 
                                     <div class="modal-content">
@@ -555,8 +555,8 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-frango">Comprar</button>
-                                <dialog>
+                                <button class="comprar cor-frango" id="comprar-frango">Comprar</button>
+                                <dialog id="dialog-frango">
                                     <div class="modal-close">x</div>
 
                                     <div class="modal-content">
@@ -662,8 +662,8 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-frango">Comprar</button>
-                                <dialog>
+                                <button class="comprar cor-frango" id="comprar-frango-fritas">Comprar</button>
+                                <dialog id="dialog-frango-fritas">
                                     <div class="modal-close">x</div>
 
                                     <div class="modal-content">
@@ -775,8 +775,8 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-tudo">Comprar</button>
-                                <dialog>
+                                <button class="comprar cor-tudo" id="comprar-tudo">Comprar</button>
+                                <dialog id="dialog-tudo">
                                     <div class="modal-close">x</div>
 
                                     <div class="modal-content">
@@ -882,8 +882,8 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="comprar cor-tudo">Comprar</button>
-                                <dialog>
+                                <button class="comprar cor-tudo" id="comprar-tudo-fritas">Comprar</button>
+                                <dialog id="dialog-tudo-fritas">
                                     <div class="modal-close">x</div>
 
                                     <div class="modal-content">
