Reduced unnecessary lines of code, called dialog tag only once

--- a/index.html
+++ b/index.html
@@ -118,18 +118,6 @@
                                     </div>
                                 </div>
                                 <button class="comprar cor-salada" id="comprar-salada">Comprar</button>
-                                <dialog id="dialog-salada">
-                                    <div class="modal-close">x</div>
-
-                                    <div class="modal-content">
-                                        <h2>Observações</h2>
-                                        <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação?
-                                            Descreva abaixo.</p>
-                                        <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35"
-                                            rows="4"></textarea>
-                                        <a class="modal-link" href="#">Continue Comprando</a>
-                                    </div>
-                                </dialog>
                             </div>
                         </div>
 
@@ -225,18 +213,6 @@
                                     </div>
                                 </div>
                                 <button class="comprar cor-salada" id="comprar-salada-fritas">Comprar</button>
-                                <dialog id="dialog-salada-fritas">
-                                    <div class="modal-close">x</div>
-
-                                    <div class="modal-content">
-                                        <h2>Observações</h2>
-                                        <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação?
-                                            Descreva abaixo.</p>
-                                        <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35"
-                                            rows="4"></textarea>
-                                        <a class="modal-link" href="#">Continue Comprando</a>
-                                    </div>
-                                </dialog>
                             </div>
                         </div>
                     </div>
@@ -337,18 +313,6 @@
                                     </div>
                                 </div>
                                 <button class="comprar cor-bacon" id="comprar-bacon">Comprar</button>
-                                <dialog id="dialog-bacon">
-                                    <div class="modal-close">x</div>
-
-                                    <div class="modal-content">
-                                        <h2>Observações</h2>
-                                        <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação?
-                                            Descreva abaixo.</p>
-                                        <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35"
-                                            rows="4"></textarea>
-                                        <a class="modal-link" href="#">Continue Comprando</a>
-                                    </div>
-                                </dialog>
                             </div>
                         </div>
 
@@ -443,18 +407,6 @@
                                     </div>
                                 </div>
                                 <button class="comprar cor-bacon" id="comprar-bacon-fritas">Comprar</button>
-                                <dialog id="dialog-bacon-fritas">
-                                    <div class="modal-close">x</div>
-
-                                    <div class="modal-content">
-                                        <h2>Observações</h2>
-                                        <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação?
-                                            Descreva abaixo.</p>
-                                        <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35"
-                                            rows="4"></textarea>
-                                        <a class="modal-link" href="#">Continue Comprando</a>
-                                    </div>
-                                </dialog>
                             </div>
                         </div>
                     </div>
@@ -556,18 +508,6 @@
                                     </div>
                                 </div>
                                 <button class="comprar cor-frango" id="comprar-frango">Comprar</button>
-                                <dialog id="dialog-frango">
-                                    <div class="modal-close">x</div>
-
-                                    <div class="modal-content">
-                                        <h2>Observações</h2>
-                                        <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação?
-                                            Descreva abaixo.</p>
-                                        <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35"
-                                            rows="4"></textarea>
-                                        <a class="modal-link" href="#">Continue Comprando</a>
-                                    </div>
-                                </dialog>
                             </div>
                         </div>
 
@@ -663,18 +603,6 @@
                                     </div>
                                 </div>
                                 <button class="comprar cor-frango" id="comprar-frango-fritas">Comprar</button>
-                                <dialog id="dialog-frango-fritas">
-                                    <div class="modal-close">x</div>
-
-                                    <div class="modal-content">
-                                        <h2>Observações</h2>
-                                        <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação?
-                                            Descreva abaixo.</p>
-                                        <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35"
-                                            rows="4"></textarea>
-                                        <a class="modal-link" href="#">Continue Comprando</a>
-                                    </div>
-                                </dialog>
                             </div>
                         </div>
                     </div>
@@ -776,18 +704,6 @@
                                     </div>
                                 </div>
                                 <button class="comprar cor-tudo" id="comprar-tudo">Comprar</button>
-                                <dialog id="dialog-tudo">
-                                    <div class="modal-close">x</div>
-
-                                    <div class="modal-content">
-                                        <h2>Observações</h2>
-                                        <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação?
-                                            Descreva abaixo.</p>
-                                        <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35"
-                                            rows="4"></textarea>
-                                        <a class="modal-link" href="#">Continue Comprando</a>
-                                    </div>
-                                </dialog>
                             </div>
                         </div>
 
@@ -883,22 +799,22 @@
                                     </div>
                                 </div>
                                 <button class="comprar cor-tudo" id="comprar-tudo-fritas">Comprar</button>
-                                <dialog id="dialog-tudo-fritas">
-                                    <div class="modal-close">x</div>
-
-                                    <div class="modal-content">
-                                        <h2>Observações</h2>
-                                        <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação?
-                                            Descreva abaixo.</p>
-                                        <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35"
-                                            rows="4"></textarea>
-                                        <a class="modal-link" href="#">Continue Comprando</a>
-                                    </div>
-                                </dialog>
                             </div>
                         </div>
                     </div>
                 </div>
+                <dialog>
+                    <div class="modal-close">x</div>
+
+                    <div class="modal-content">
+                        <h2>Observações</h2>
+                        <p>Deseja remover algum ingrediente do seu pedido ou fazer alguma observação?
+                            Descreva abaixo.</p>
+                        <textarea name="observacaoDoPedido" id="observacaoDoPedido" cols="35"
+                            rows="4"></textarea>
+                        <a class="modal-link" href="#">Continue Comprando</a>
+                    </div>
+                </dialog>
             </div>
 
             <nav class="opcoes">
