--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/carousel.css">
     <link rel="stylesheet" href="assets/css/modal.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/responsivo.css">
 
     <link rel="icon" href="assets/img/icone/icon.png">
@@ -808,6 +809,17 @@
         </div>
 
     </main>
+
+    <footer>
+        <div class="container-footer">
+            <p>&copy; Desenvolido por <span class="nome-footer">Daiene Batagioti</span></p>
+            <div class="imagens-contato">
+                <a href="https://github.com/Daiene/Menu-website" target><img class="image-logo" src="assets/img/logos-contato/github.png" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/daiene-batagioti/" target><img class="image-logo" src="assets/img/logos-contato/linkedin.png" alt="LinkedIn"></a>
+                <a href="mailto:daiene.batagioti@hotmail.com" target><img class="image-logo" src="assets/img/logos-contato/outlook.png" alt="outlook"></a>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
