--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
         <div class="container-footer">
             <p>&copy; Desenvolido por <span class="nome-footer">Daiene Batagioti</span></p>
             <div class="imagens-contato">
-                <a href="https://github.com/Daiene/Menu-website" target><img class="image-logo" src="assets/img/logos-contato/github.png" alt="GitHub"></a>
+                <a href="https://github.com/Daiene" target><img class="image-logo" src="assets/img/logos-contato/github.png" alt="GitHub"></a>
                 <a href="https://www.linkedin.com/in/daiene-batagioti/" target><img class="image-logo" src="assets/img/logos-contato/linkedin.png" alt="LinkedIn"></a>
                 <a href="mailto:daiene.batagioti@hotmail.com" target><img class="image-logo" src="assets/img/logos-contato/outlook.png" alt="outlook"></a>
             </div>
